[options]
packages = find:
python_requires = >= 3.8
zip_safe = true
package_dir =
    = hgvs
install_requires =
    attrs >= 17.4.0  # https://github.com/biocommons/hgvs/issues/473
    biocommons.seqrepo >= 0.6.5
    bioutils >= 0.4.0,<1.0
    configparser >= 3.3.0
    ipython
    parsley
    psycopg2
    six

setup_requires =
    pytest-runner
    setuptools_scm
    wheel

[options.package_data]
hgvs =
    _data/*


[options.extras_require]
dev =
    flake8
    ipython
    jupyter
    pytest >= 5.3
    pytest-cov >= 2.8
    pytest-vcr
    restview
    setuptools
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-fulltoc >= 1.1
    tox
    vcrpy
    yapf


# TODO: Needed?
[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[run]
# enable branch coverage after we get default coverage up
# branch = True
omit =
     hgvs/__init__.py
     hgvs/dataproviders/interface.py
     hgvs/dataproviders/ncbi.py
     hgvs/dataproviders/uta.py
     hgvs/decorators/*
     hgvs/intervalmapper.py
     hgvs/shell.py
     hgvs/transcriptmapper.py
     hgvs/utils/PersistentDict.py
     hgvs/utils/context.py
     hgvs/utils/orderedenum.py

[report]
show_missing = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

