[metadata]
name = hgvs

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src
# TODO: Needed?
# exclude =
#     __pycache__
#     *.pyc


setup_requires =
    pytest-runner
    setuptools_scm
    wheel

[options.package_data]
hgvs =
    _data/*


[options.extras_require]
dev =
    black
    flake8
    ipython
    isort
    jupyter
    pytest >= 5.3
    pytest-cov >= 2.8
    pytest-recording
    restview
    setuptools
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-fulltoc >= 1.1
    tox
    vcrpy
    yapf


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291


[run]
# enable branch coverage after we get default coverage up
# branch = True
omit =
     hgvs/__init__.py
     hgvs/dataproviders/interface.py
     hgvs/dataproviders/ncbi.py
     hgvs/dataproviders/uta.py
     hgvs/decorators/*
     hgvs/intervalmapper.py
     hgvs/shell.py
     hgvs/transcriptmapper.py
     hgvs/utils/PersistentDict.py
     hgvs/utils/context.py
     hgvs/utils/orderedenum.py

[report]
show_missing = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

